--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="678e9f">  <td>22/03/04 01:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="678e9f">  <td>22/03/04 01:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="678e9f">  <td>22/03/04 01:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="678e9f">  <td>22/03/04 01:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="678e9f">  <td>22/03/04 01:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="678e9f">  <td>22/03/04 01:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/04 01:39:21</td>   <td>-51585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllCategoryIsShown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">verifyAllCategoryIsShown</td> 
-  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/04 01:39:50</td>   <td>-22991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllSubCategoryIsShown(java.lang.String,[Ljava.lang.String;)[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">verifyAllSubCategoryIsShown</td> 
-  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/04 01:39:50</td>   <td>-22991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllSubCategoryIsShown(java.lang.String,[Ljava.lang.String;)[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">verifyAllSubCategoryIsShown</td> 
-  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/04 01:39:50</td>   <td>-22991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllSubCategoryIsShown(java.lang.String,[Ljava.lang.String;)[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">verifyAllSubCategoryIsShown</td> 
-  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/04 01:40:05</td>   <td>-7771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">verifySubCategorySearch</td> 
-  <td>main@1276611190</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/04 01:40:05</td>   <td>-7771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@79e2c065]">verifySubCategorySearch</td> 
-  <td>main@1276611190</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:01:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:01:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:01:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:01:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:01:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:01:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:02:33</td>   <td>62137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:02:33</td>   <td>62137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:02:33</td>   <td>62137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:03:09</td>   <td>98077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CheckoutTest@43d7741f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:02:33</td>   <td>62137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:03:09</td>   <td>98077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CheckoutTest@43d7741f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:02:33</td>   <td>62137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:02:33</td>   <td>62137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:02:33</td>   <td>62137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>22/03/05 16:03:09</td>   <td>98077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CheckoutTest@43d7741f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>22/03/05 16:01:32</td>   <td>1362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCartTest.verifyAddToCartAsGuestCustomer()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">verifyAddToCartAsGuestCustomer</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>22/03/05 16:01:44</td>   <td>13002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCartTest.verifyAddtoCartAsASignedInCustomer()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">verifyAddtoCartAsASignedInCustomer</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>22/03/05 16:01:56</td>   <td>25047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCartTest.verifyAddtoCartByAddingMultipleQuantities()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">verifyAddtoCartByAddingMultipleQuantities</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>22/03/05 16:02:04</td>   <td>33134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCartTest.verifyAddtoCartByAddingSameProductMultiplyTimes()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">verifyAddtoCartByAddingSameProductMultiplyTimes</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>22/03/05 16:02:12</td>   <td>40776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCartTest.verifyAddtoCartByAddingZeroQuantities()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">verifyAddtoCartByAddingZeroQuantities</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>22/03/05 16:02:19</td>   <td>48427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCartTest.verifyAddtoCartFromProductsPage()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">verifyAddtoCartFromProductsPage</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="f295b7">  <td>22/03/05 16:02:27</td>   <td>55813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCartTest.verifyAddtoCartFromViewItem()[pri:0, instance:com.qa.testscripts.AddtoCartTest@2698dc7]">verifyAddtoCartFromViewItem</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>22/03/05 16:00:41</td>   <td>-49748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllCategoryIsShown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">verifyAllCategoryIsShown</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>22/03/05 16:01:09</td>   <td>-21458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllSubCategoryIsShown(java.lang.String,[Ljava.lang.String;)[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">verifyAllSubCategoryIsShown</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>22/03/05 16:01:09</td>   <td>-21458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllSubCategoryIsShown(java.lang.String,[Ljava.lang.String;)[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">verifyAllSubCategoryIsShown</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>22/03/05 16:01:09</td>   <td>-21458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifyAllSubCategoryIsShown(java.lang.String,[Ljava.lang.String;)[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">verifyAllSubCategoryIsShown</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="6f8e63">  <td>22/03/05 16:02:34</td>   <td>63343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.verifyCartAsGuestCustomer()[pri:0, instance:com.qa.testscripts.CheckoutTest@43d7741f]">verifyCartAsGuestCustomer</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="6f8e63">  <td>22/03/05 16:02:43</td>   <td>72361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.verifyCartAsSignedInCustomer()[pri:0, instance:com.qa.testscripts.CheckoutTest@43d7741f]">verifyCartAsSignedInCustomer</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="6f8e63">  <td>22/03/05 16:02:55</td>   <td>84419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.verifyPlaceOrder()[pri:0, instance:com.qa.testscripts.CheckoutTest@43d7741f]">verifyPlaceOrder</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>22/03/05 16:01:24</td>   <td>-6822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">verifySubCategorySearch</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>22/03/05 16:01:24</td>   <td>-6822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@544a2ea6]">verifySubCategorySearch</td> 
+  <td>main@1143371233</td>   <td></td> </tr>
 </table>
