--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,25 +4,33 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.testscripts.BrandProductTest</td>
+<td>com.qa.testscripts.RegistrationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyProductCountUnderEachBrands</td>
-<td>regression integration brand </td>
+<td>verifyPageTitle</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegistrationWithExistingUser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegistartionWithValidCredentials</td>
+<td>regression frontend </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAllBrandsAreListed</td>
-<td>regression integration brand </td>
+<td>verifySignUpWithEmptyCredentials</td>
+<td>frontend </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyBrandListing</td>
-<td>regresssion brand frontend </td>
+<td>verifyRegistartionWithInvalidEmail</td>
+<td>frontend </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
