--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,63 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.qa.testscripts.AddtoCartTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddtoCartByAddingMultipleQuantities</td>
+<td>cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddtoCartByAddingSameProductMultiplyTimes</td>
+<td>cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddtoCartFromViewItem</td>
+<td>cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddtoCartAsASignedInCustomer</td>
+<td>regression cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddToCartAsGuestCustomer</td>
+<td>regression cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddtoCartFromProductsPage</td>
+<td>cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddtoCartByAddingZeroQuantities</td>
+<td>cart </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.qa.testscripts.CategoryProductTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -23,6 +80,43 @@
 <td>&nbsp;</td>
 <td>verifyAllCategoryIsShown</td>
 <td>regression category frontend </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.qa.testscripts.CheckoutTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPlaceOrder</td>
+<td>regression cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCartAsSignedInCustomer</td>
+<td>regression cart </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCartAsGuestCustomer</td>
+<td>regression cart </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
