--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="688db1">  <td>22/03/05 16:35:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="688db1">  <td>22/03/05 16:35:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="688db1">  <td>22/03/05 16:35:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="688db1">  <td>22/03/05 16:35:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="688db1">  <td>22/03/05 16:35:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>22/03/05 16:34:12</td>   <td>-51402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyPageTitle()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">verifyPageTitle</td> 
-  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>22/03/05 16:34:25</td>   <td>-38119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">verifyRegistartionWithInvalidEmail</td> 
-  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>22/03/05 16:34:34</td>   <td>-29459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithValidCredentials(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">verifyRegistartionWithValidCredentials</td> 
-  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>22/03/05 16:34:50</td>   <td>-13053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistrationWithExistingUser(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">verifyRegistrationWithExistingUser</td> 
-  <td>main@928466577</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>22/03/05 16:34:58</td>   <td>-5438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifySignUpWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@1990a65e]">verifySignUpWithEmptyCredentials</td> 
-  <td>main@928466577</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>22/03/07 18:24:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>22/03/07 18:24:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>22/03/07 18:24:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>22/03/07 18:24:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>22/03/07 18:24:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7dc364">  <td>22/03/07 18:23:47</td>   <td>-52433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyPageTitle()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">verifyPageTitle</td> 
+  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7dc364">  <td>22/03/07 18:23:58</td>   <td>-41331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">verifyRegistartionWithInvalidEmail</td> 
+  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7dc364">  <td>22/03/07 18:24:10</td>   <td>-28965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithValidCredentials(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">verifyRegistartionWithValidCredentials</td> 
+  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7dc364">  <td>22/03/07 18:24:27</td>   <td>-12056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistrationWithExistingUser(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">verifyRegistrationWithExistingUser</td> 
+  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7dc364">  <td>22/03/07 18:24:35</td>   <td>-4223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifySignUpWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@15aab8c6]">verifySignUpWithEmptyCredentials</td> 
+  <td>main@762384154</td>   <td></td> </tr>
 </table>
