--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,45 +4,56 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.testscripts.AddtoCartTest</td>
+<td>com.qa.testrunner.TestRunner</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddtoCartByAddingMultipleQuantities</td>
-<td>cart </td>
+<td>runScenario</td>
+<td>cucumber </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddtoCartByAddingSameProductMultiplyTimes</td>
-<td>cart </td>
+<td>setUpClass</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddtoCartFromViewItem</td>
-<td>cart </td>
+<td>tearDownClass</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.qa.testscripts.BrandProductTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddtoCartAsASignedInCustomer</td>
-<td>regression cart </td>
+<td>verifyProductCountUnderEachBrands</td>
+<td>regression integration brand </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddToCartAsGuestCustomer</td>
-<td>regression cart </td>
+<td>verifyAllBrandsAreListed</td>
+<td>regression integration brand </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddtoCartFromProductsPage</td>
-<td>cart </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyAddtoCartByAddingZeroQuantities</td>
-<td>cart </td>
+<td>verifyBrandListing</td>
+<td>regresssion brand frontend </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -80,43 +91,6 @@
 <td>&nbsp;</td>
 <td>verifyAllCategoryIsShown</td>
 <td>regression category frontend </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>com.qa.testscripts.CheckoutTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyPlaceOrder</td>
-<td>regression cart </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCartAsSignedInCustomer</td>
-<td>regression cart </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCartAsGuestCustomer</td>
-<td>regression cart </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
